src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AD_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>AD User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Can_Modify_Locked_WINs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To manage locked WINs, users need this permission plus permission set (for modify all access to relate cases and WIN contributor records they did not create)</description>
        <inlineHelpText>If indicated, user has access to modify locked WINs records.</inlineHelpText>
        <label>Can Modify Locked WINs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <description>Read only field populated when a user has never logged in, and is batch deactivated.</description>
        <inlineHelpText>Read only field populated when a user has never logged in, and is batch deactivated.</inlineHelpText>
        <label>Deactivated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Taxonomy_Office__c</fullName>
        <label>Department Taxonomy Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITA_Office__c</fullName>
        <description>temp field for collecting office names until picklist option is defined or master list.</description>
        <label>ITA Office (AD)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this flag to mark the users that should be kept in &apos;Active&apos; status regardless of what is received from AD</description>
        <label>Keep Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutlookInstructionsSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if outlook plugin instructions were sent</description>
        <label>Send Outlook Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RH_Lev_1_Top_Level__c</fullName>
        <inlineHelpText>Highest level within organization. Add all three areas to pull reports for all ITA.</inlineHelpText>
        <label>User Unit</label>
        <picklist>
            <picklistValues>
                <fullName>GM All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_2_DAS_Level__c</fullName>
        <inlineHelpText>Level 2</inlineHelpText>
        <label>User DAS</label>
        <picklist>
            <picklistValues>
                <fullName>GM Advocacy Everywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC Policy &amp; Negotiations DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-HQ DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-China-HQ DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-HQ DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-HQ DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-HQ DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SelectUSA Everywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA MFG DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA NTTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA OACIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA OPCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA SVCS DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TCGM DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TPA DAS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TPPSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_3_Region_2__c</fullName>
        <label>User Region</label>
        <picklist>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Great Lakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field MidAtlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field MidWest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Pacific North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Pacific South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-Field Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-DDG Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SelectUSA-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SelectUSA-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Advocacy-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Advocacy-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-China-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-China-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-DG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-USA-HQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_4_Region_1__c</fullName>
        <label>User Sub-region</label>
        <picklist>
            <picklistValues>
                <fullName>GM Advocacy Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Advocacy HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Balkans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field EURASIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field GEAUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Gulf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Nordics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field PoCz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field SPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field ANDPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field ARGUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field CAFTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SelectUSA HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM SelectUSA-Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA MFG OEEI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA MFG OHIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA MFG OTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA SVCS ODSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA SVCS OFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA SVCS OSCPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TCGM OCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TCGM OM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TCGM OTEXA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA TPA OIPR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_5_Country__c</fullName>
        <label>User Country</label>
        <picklist>
            <picklistValues>
                <fullName>GM CS-Asia-Field ANZ Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ANZ New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Kaula Lumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field ASEAN Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field Pakistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-Asia-Field Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-China-Field China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Africa South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field EURASIA Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field GEAUS Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Gulf UAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Iraq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-EMEA-Field Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM CS-WH-Field Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_6_Office__c</fullName>
        <label>User Office</label>
        <picklist>
            <picklistValues>
                <fullName>CS-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-Field-African-Development-Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-Field-Asia-Development-Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-Field-Europe-Development-Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-Field-InterAmerican-Development-Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-Field-World-Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Advocacy-HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ANZ-Australia-Canberra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ANZ-Australia-Perth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ANZ-Australia-Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ANZ-NewZealand-Auckland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ANZ-NewZealand-Wellington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Jakarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-KaulaLumpur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Rangoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Vietnam-Hanoi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-ASEAN-Vietnam-HCMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-India-NewDelhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-Japan-OsakaKobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-Japan-Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM-CS Asia-Field-Kabul</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RH_Lev_7_Individual__c</fullName>
        <label>User Agency</label>
        <picklist>
            <picklistValues>
                <fullName>ITA</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_by_Last_AD_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that the record was last updated by AD</description>
        <label>Updated by Last AD Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <picklist>
            <picklistValues>
                <fullName>Bread &amp; Butter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meat &amp; Potatoes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>The Whole Enchilada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <picklist>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Generation</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Prevent_Role_Hierarchy_Updates</fullName>
        <active>false</active>
        <description>Inactivated for Potential Future Use.  Prevents Role Hierarchy Updates for all users except System Administrators.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp;
ISCHANGED(RH_Lev_6_Office__c) ||
ISCHANGED(RH_Lev_1_Top_Level__c) ||
ISCHANGED(RH_Lev_2_DAS_Level__c) ||
ISCHANGED(RH_Lev_3_Region_2__c) ||
ISCHANGED(RH_Lev_4_Region_1__c) ||
ISCHANGED(RH_Lev_5_Country__c) ||
ISCHANGED(RH_Lev_7_Individual__c) ||
ISCHANGED(ITA_Office__c)
)</errorConditionFormula>
        <errorMessage>Only System Administrators may update Role Hierarchies.</errorMessage>
    </validationRules>
</CustomObject>